--- a/style.css
+++ b/style.css
@@ -92,6 +92,9 @@ input:focus::-webkit-input-placeholder { color:transparent; }
 input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
 input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
 
+/* Mailchimp for Wordpress alert styling */
+.signup .mc4wp-success {background-color: rgba(0,0,0,0.7); color: #fff; position: absolute; top: 40px;}
+
 /* CSS for the modal button: */
 .close, .modal-title {color: white; opacity: 1;}
 
