--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ button:focus {outline:0px; -webkit-appearance:none;}
 .navbar-left {padding-top: 10px; float: left;}
 .navbar-right {float: left;}
 .not-found {padding-top: 20px;}
+#home-link {display: none;}
 
 .nav-share-buttons a {font-size: 13px; color: white; float: left; clear: both; padding-bottom: 5px; width: 100%px}
 .nav-share-buttons a:hover {text-decoration: underline;}
@@ -202,6 +203,7 @@ h4.entry-author, h3.entry-address {margin-top: 0;}
 .next-prev a {color: #fff; padding: 5px;}
 .next-prev a:hover {background: #333;}
 
+
 /* Single event Page */
 .single header {padding: 0; overflow: hidden;} 
 .single .header-info {background: rgba(0,0,0,0.5); z-index: 2; position: relative; padding: 50px 0 25px 30px;}
@@ -238,7 +240,7 @@ iframe.spotify {width: 300px; height: 380px;}
 	
 /* 1024px */
 @media all and (max-width: 1024px) {
-	.nabar-nav {margin-top: auto;}
+	.navbar-nav {margin-top: auto;}
 }
 
 /* iPad, portrait or landscape */
@@ -343,4 +345,5 @@ and (orientation : portrait) {
     .navbar-nav>li>a {padding-top: 10px; padding-bottom: 10px;}
     .collapse.in{display:block;}
     .article-image{display: none;}
+    #home-link {display: block;}
 }
