--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 .entry-details .dj {padding-top: 8px;}
 .thumb .meta {padding: 6px 0 2px 0;}
 .thumb .meta a {color: #000;}
-.filter-us {padding-top: 20px;}
+.posts-container {padding-top: 20px; overflow: hidden; width: 100%; height: 980px;}
 
 /* Filtering */
 .filtering {margin-bottom: 20px;}
@@ -251,6 +251,7 @@ and (max-device-width : 1024px)  {
 	.front-content {padding: 0 10px 0 10px;}
 	#sidebar h3 {font-size: 16px;}
 	h4.logotext {font-size: 15px; margin-top: 5px;}
+	.navbar-nav {margin-top: 45px;}
 	/*changes the size of the hamburger: */
 	/* commented out because the hamburger is bigger on all screens now */
 /*	.navbar-toggle .icon-bar {width: 40px; height: 5px; margin-bottom: 10px; margin-right: 20px;} */
@@ -267,12 +268,12 @@ and (orientation : portrait) {
 	#all-events {margin-top: 10px;}
 	#sidebar {font-size: 10px;}
 	#sidebar h3 {font-size: 13px; letter-spacing: -1px;}
-	.spacer {height: 0;}
+	.spacer {height: 60px;;}
 	.navbar {height: 63px;}
 	.navbar-header img.logo {width: 100px; padding-top: 5px;}
 	.logotext {display: none;}
 	.nav-share-buttons {display:none;}
-	.navbar-nav {margin-top:10px;}
+	ul.navbar-nav {margin-top: 23px;}
 }
 
 /* iPhone */
