--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ button:focus {outline:0px; -webkit-appearance:none;}
 .navbar {background: black; border: none; height: 117px;}
 .navbar h6 {margin: 4px 0 0 0;}
 .navbar-header img.logo {width: 220px;}
-.navbar-default .nav li a {color: white; padding: 10px 15px 13px 15px;}
+.navbar-default .nav li a {color: #fff; padding: 10px 15px 13px 15px;}
+.navbar-default .nav li a:hover {color: #fff; background: #222; border-radius: 20px;}
 .navbar-nav {margin-top: 45px;}
 .navbar-collapse.collapsing .nav{margin-top: -15px;}
 .logotext {color: white;}
@@ -102,7 +103,7 @@ input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
 .modal-body {padding-left: 0;}
 
 h3.section-heading {color: white; font-weight: 100; letter-spacing: 3px; margin-top: 20px; padding-bottom: 20px;}
-h3.event-heading {text-align: center; height: 112px; background: url('img/bg-header.png') no-repeat center top; padding: 50px 0; margin: 0;}
+h3.event-heading {text-align: center; height: 112px; background: url('img/alt-divider-3.jpg') no-repeat center top; padding: 50px 0; margin: 0;}
 
 .signup {color: white; text-align: center; font-size: 18px; padding: 10px 0 40px 0;}
 .signup p {padding: 0 0 8px 0;}
@@ -138,7 +139,8 @@ h3.entry-title a {color: #fff; text-transform: uppercase; font-size: 20px;}
 .filtering button {color: #000; letter-spacing: 1px; border: none; padding: 15px 20px 12px 20px;}
 .filtering button.active {-moz-box-shadow: inset 0 0 11px #666; -webkit-box-shadow: inset 0 0 11px #666; box-shadow: inset 0 0 11px #666;}
 
-.events {min-height: 725px;}
+.events {min-height: 725px; background: url('img/alt-divider-3.jpg') no-repeat center top;}
+.events h3.event-heading {background: none;}
 .all-events {text-align: center; margin-top: 40px;}
 .all-events a {color: #fff; float: left; display: block; margin: 0 45%; padding-top: 8px; font-weight: 500;}
 
@@ -217,10 +219,12 @@ h4.entry-author, h3.entry-address {margin-top: 0;}
 .single .entry-summary {padding: 25px; color: #fff; max-width: 750px;}
 .single .front-content {padding: 0;}
 .category-name {float: left;}
+
 .category-term {float: left; margin: 8px; font-weight: 500;}
 
 /* Editorial */
 iframe.spotify {width: 300px; height: 380px;}
+iframe.youtube {height: 350px;}
 
 /* this media query is by Dave- centers the nav when not in hamburger mode */
 /* the centering idea is from http://designshack.net/articles/css/how-to-center-anything-with-css/ */
@@ -268,7 +272,7 @@ and (orientation : portrait) {
 	#all-events {margin-top: 10px;}
 	#sidebar {font-size: 10px;}
 	#sidebar h3 {font-size: 13px; letter-spacing: -1px;}
-	.spacer {height: 60px;;}
+	.spacer {height: 60px;}
 	.navbar {height: 63px;}
 	.navbar-header img.logo {width: 100px; padding-top: 5px;}
 	.logotext {display: none;}
