--- a/style.css
+++ b/style.css
@@ -177,6 +177,8 @@ footer {padding: 4px 10px 70px 0; text-align: right;}
 .newsletter-info {color: #fff;}
 .newsthumb {padding: 0 20px 20px 20px;}
 .newsletter .sharing {padding: 15px;}
+.news-logo {margin-right: 20px;}
+.news-text-right {padding-left: 20px;}
 
 /* END CSS BY DAVE */
 
